[package]
name = "gnulightning-sys"
version = "2.3.0"
build = "build.rs"
edition = "2018"
description = "Rust bindings for gnulightning jit compiler"
license = " GPL-3.0-only"
license-file = "LICENSE"
homepage = "https://github.com/n8ta/gnulightning-sys"
repository = "https://github.com/n8ta/gnulightning-sys"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
pkg-config = "0.3"